<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timerViewId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/timerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextClock
                android:id="@+id/hour_time_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital"
                android:format12Hour="hh"
                android:gravity="center"
                android:text="@string/hour_time"
                android:textSize="@dimen/_60sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gap_time"
                android:textSize="@dimen/_60sdp" />

            <TextClock
                android:id="@+id/minute_time_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/digital"
                android:format12Hour="mm"
                android:text="@string/minute_time"
                android:textSize="@dimen/_60sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gap_time"
                android:textSize="@dimen/_60sdp" />

            <TextClock
                android:id="@+id/second_time_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/digital"
                android:format12Hour="ss"
                android:text="@string/minute_time"
                android:textSize="@dimen/_60sdp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/timerId"
            app:layout_constraintStart_toStartOf="@+id/timerId"
            app:layout_constraintTop_toBottomOf="@+id/timerId">

            <TextClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital"
                android:format12Hour="MMM dd yyyy"
                android:text="@string/month_date_year"
                android:textSize="@dimen/_15sdp" />

            <TextClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/digital"
                android:format12Hour="EEEE"
                android:gravity="center"
                android:text="SATURDAY"
                android:textSize="@dimen/_15sdp" />


        </LinearLayout>

        <TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/digital"
            android:format12Hour="a"
            android:text="@string/am"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@+id/timerId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="@+id/timerId" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/settingsBtnId"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:contentDescription="@string/settings_disc"
        android:src="@drawable/settings_black_512" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingViewId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:background="#A8000000"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/focusModeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2">

            <View
                android:id="@+id/focusModeBtnId"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/settings_options_shape_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:contentDescription="@string/focus_icon"
                android:src="@drawable/focus_white_512"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/focusModeBtnId"
                app:layout_constraintStart_toStartOf="@+id/focusModeBtnId"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/exo2_light"
                android:text="@string/focus_mode"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/focusModeBtnId"
                app:layout_constraintStart_toStartOf="@+id/focusModeBtnId"
                app:layout_constraintTop_toBottomOf="@+id/focusModeBtnId" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_70sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/focusModeId"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/blockCallViewBtnId"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/settings_options_shape_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:contentDescription="@string/block_call"
                android:src="@drawable/block_call_white_512"
                app:layout_constraintBottom_toBottomOf="@+id/blockCallViewBtnId"
                app:layout_constraintEnd_toEndOf="@+id/blockCallViewBtnId"
                app:layout_constraintStart_toStartOf="@+id/blockCallViewBtnId"
                app:layout_constraintTop_toTopOf="@+id/blockCallViewBtnId" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/exo2_light"
                android:text="@string/block_call"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/blockCallViewBtnId"
                app:layout_constraintStart_toStartOf="@+id/blockCallViewBtnId"
                app:layout_constraintTop_toBottomOf="@+id/blockCallViewBtnId" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/blockNotificationId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@+id/focusModeId"
            app:layout_constraintStart_toStartOf="@+id/focusModeId"
            app:layout_constraintTop_toBottomOf="@+id/focusModeId">

            <View
                android:id="@+id/notificationView"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/settings_options_shape_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/notificationId"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:contentDescription="@string/block_call"
                android:src="@drawable/block_notification_white_512"
                app:layout_constraintBottom_toBottomOf="@+id/notificationView"
                app:layout_constraintEnd_toEndOf="@+id/notificationView"
                app:layout_constraintStart_toStartOf="@+id/notificationView"
                app:layout_constraintTop_toTopOf="@+id/notificationView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/exo2_light"
                android:text="@string/block_notification"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/notificationView"
                app:layout_constraintStart_toStartOf="@+id/notificationView"
                app:layout_constraintTop_toBottomOf="@+id/notificationView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/customiseId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <View
                android:id="@+id/customiseViewId"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/settings_options_shape_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/customiseIconId"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:contentDescription="@string/block_call"
                android:src="@drawable/customise_white_512"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/customiseViewId"
                app:layout_constraintStart_toStartOf="@+id/customiseViewId"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/customiseTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/exo2_light"
                android:text="@string/customise"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/customiseViewId"
                app:layout_constraintStart_toStartOf="@+id/customiseViewId"
                app:layout_constraintTop_toBottomOf="@+id/customiseViewId" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nightModeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@+id/blockNotificationId"
            app:layout_constraintStart_toStartOf="@+id/blockNotificationId"
            app:layout_constraintTop_toBottomOf="@+id/blockNotificationId">

            <View
                android:id="@+id/nightViewId"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/settings_options_shape_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/nightModeIcon"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:contentDescription="@string/block_call"
                android:src="@drawable/night_white_512"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nightModeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/exo2_light"
                android:text="@string/night_mode"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nightViewId"
                app:layout_constraintTop_toBottomOf="@+id/nightViewId" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>